--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,8 +3,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  padding-left: 1rem;
-  padding-right: 1rem;
+
 }
 
 .header {
@@ -50,31 +49,51 @@ body {
 
 // -------- Gallery-------
 
-.gallery {
-  display: grid;
-  grid-auto-flow: row;
-  grid-auto-columns: 300px;
-  gap: 2.5rem;
+
+main{
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 5rem;
+
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.card {
+.gallery {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+
+  justify-content: center;
+}
+
+
+
+.photo-card{
+  display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+
+  max-width: 300px;
+
+
 }
 
-.card-image {
-  width: 300px;
+.photo-card > img {
+  max-width: 300px;
+  width: inherit;
   height: auto;
 }
 
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-}
+// .gallery > div {
+//   background-color: rgba(255, 255, 255, 0.8);
+//   text-align: center;
+//   padding: 1rem 0;
+//   font-size: 1rem;
+// }
 
 .load-more {
   display: block;
@@ -88,4 +107,10 @@ body {
 
   background-color: #fff;
   border: 1px solid rgb(104, 189, 161);
+}
+
+.info{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
 }
